--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   },
   "dependencies": {
     "docusign-esign": "^4.2.1",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "fs": "0.0.1-security"
+  },
+  "engines": {
+    "node": "10.9.0"
   }
 }
